Made landing page for mobile

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aharon Zarnighian</title>
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-	
+	<div class="landingContainer">
+        <img src="IMG-20200702-WA0008.jpg" alt="Picture of me">
+        <h1>Hi, <br> I'm Aharon Zarnighian.</h1>
+        <h2>Web Developer</h2>
+    </div>
   </body>
 </html>
