Made landing page look better for desktop

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   <body>
 	<div class="landingContainer">
         <img src="IMG-20200702-WA0008.jpg" alt="Picture of me">
-        <h1>Hi, <br> I'm Aharon Zarnighian.</h1>
-        <h2>Web Developer</h2>
+        <div class="landingTextContainer">
+            <h2>Hi,</h2>
+            <h1>I'm Aharon Zarnighian.</h1>
+            <h2>Web Developer</h2>
+        </div>        
     </div>
   </body>
 </html>
