Added 'My Work' section

--- a/index.html
+++ b/index.html
@@ -7,19 +7,52 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Aharon Zarnighian</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-	<div class="landingContainer">
+	<div class="container landingContainer">
         <img src="IMG-20200702-WA0008.jpg" alt="Picture of me">
         <div class="landingTextContainer">
             <h2>Hi,</h2>
             <h1>I'm Aharon Zarnighian.</h1>
             <h2>Web Developer</h2>
         </div>        
+    </div>
+    <div class="container myWorkContainer">
+        <h3>My Work</h3>
+        <div class="myWorkImgsContainer">
+            <div>
+                <img src="Trovare.png" alt="Trovare">
+                <h4>Trovare</h4>
+                <p>A website to discover restaurants around the world.</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>TomTom's APIs.</b></p>
+                <a href="https://trovare1.herokuapp.com/" class="linkButton buttonMargin" target="_blank">Link</a>
+                <a href="https://github.com/azarnighian/CS50W-FinalProject" class="linkButton" target="_blank">Code</a>
+            </div>
+            <div>
+                <img src="Restaurant.png" alt="Restaurant">
+                <h4>Restaurant</h4>
+                <p>A restaurant website template.</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>React.</b></p>
+                <a href="https://azarnighian.github.io/az-restaurant-g/" class="linkButton buttonMargin" target="_blank">Link</a>
+                <a href="https://github.com/azarnighian/az-restaurant-g" class="linkButton" target="_blank">Code</a>
+            </div>
+            <div class="github">
+                <div>
+                    <img src="GitHub_Logo_White.png" alt="GitHub">
+                </div>                
+                <h4>GitHub</h4>
+                <p>See more of my work on GitHub.</p>
+                <a href="https://github.com/azarnighian" class="linkButton" target="_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <div class="container myEducationContainer">
+        <h3>My Education</h3>
     </div>
   </body>
 </html>
