--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
                 <a href="https://azarnighian.github.io/az-restaurant-g/" class="linkButton buttonMargin" target="_blank">Link</a>
                 <a href="https://github.com/azarnighian/az-restaurant-g" class="linkButton" target="_blank">Code</a>
             </div>
-            <div class="github">
-                <div>
-                    <img src="GitHub_Logo_White.png" alt="GitHub">
-                </div>                
+            <div>            
+                <img src="GitHub_Logo.jpeg" alt="GitHub">                                
                 <h4>GitHub</h4>
                 <p>See more of my work on GitHub.</p>
                 <a href="https://github.com/azarnighian" class="linkButton" target="_blank">Link</a>
