Added 'My Contact Info' Section

--- a/index.html
+++ b/index.html
@@ -80,5 +80,15 @@
             </div>
         </div>
     </div>
+    <div class="container myContactInfoContainer">
+        <h3>My Contact Information</h3>
+        <div>
+            <h5>Email</h5>
+            <p>aharonzarnighian@gmail.com</p>
+
+            <h5>Phone</h5>
+            <p>516-967-0925</p>
+        </div>
+    </div>
   </body>
 </html>
