--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div>
                 <h4>CS50W</h4>
-                <p>"This course picks up where <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x">CS50</a> leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap." "Topics include database design, scalability, security, and user experience. Through hands-on projects, you'll learn to write and use APIs, create interactive UIs, and leverage cloud services like GitHub and Heroku. By course's end, you'll emerge with knowledge and experience in principles, languages, and tools that empower you to design and deploy applications on the Internet." 
+                <p>"This course picks up where <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x" target="_blank">CS50</a> leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap." "Topics include database design, scalability, security, and user experience. Through hands-on projects, you'll learn to write and use APIs, create interactive UIs, and leverage cloud services like GitHub and Heroku. By course's end, you'll emerge with knowledge and experience in principles, languages, and tools that empower you to design and deploy applications on the Internet." 
                     (From <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript?index=product&queryID=1a17fb870c21b8cd731e74fbf2662573&position=2" target="_blank">edx.org</a>)
                 </p>
                 <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript" class="linkButton" target="_blank">Link</a>
@@ -73,10 +73,10 @@
             <div>
                 <h4>App Academy Open</h4>
                 <p>"With App Academy Open you’ll get free access to App Academy’s entire in-person full-stack curriculum, which has placed thousands of people in software development jobs. App Academy is ranked as the #1 coding bootcamp in the US and, since 2016, has placed more software developers at Google than UC Berkeley. On the Free plan you’ll get over 1,500 hours of material (readings, videos, projects), an interactive coding environment and community features like chat to keep you connected with thousands of prospective developers across the globe." 
-                    (From <a href="https://open.appacademy.io/" target="_blank">open.appacademy.io/</a>)
+                    (From <a href="https://open.appacademy.io" target="_blank">open.appacademy.io</a>)
                     <br><i>I finished a lot of this curriculum, but I did not complete the entire curriculum, as it’s very long.</i>
                 </p>
-                <a href="https://open.appacademy.io/" class="linkButton" target="_blank">Link</a>
+                <a href="https://open.appacademy.io" class="linkButton" target="_blank">Link</a>
             </div>
         </div>
     </div>
