--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Favicons -->
+        <!-- https://favicon.io/ -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="manifest" href="favicons/site.webmanifest">        
   </head>
   <body>
 	<div class="container landingContainer">
-        <img src="IMG-20200702-WA0008.jpg" alt="Picture of me">
+        <img src="images/IMG-20200702-WA0008.jpg" alt="Picture of me">
         <div class="landingTextContainer">
             <h2>Hi,</h2>
             <h1>I'm Aharon Zarnighian.</h1>
@@ -30,7 +37,7 @@
         <h3>My Work</h3>
         <div class="myWorkImgsContainer">
             <div>
-                <img src="Trovare.png" alt="Trovare">
+                <img src="images/Trovare.png" alt="Trovare">
                 <h4>Trovare</h4>
                 <p>A website to discover restaurants around the world.</p>
                 <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>TomTom's APIs.</b></p>
@@ -38,7 +45,7 @@
                 <a href="https://github.com/azarnighian/CS50W-FinalProject" class="linkButton" target="_blank">Code</a>
             </div>
             <div>
-                <img src="Restaurant.png" alt="Restaurant">
+                <img src="images/Restaurant.png" alt="Restaurant">
                 <h4>Restaurant</h4>
                 <p>A restaurant website template.</p>
                 <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>React.</b></p>
@@ -46,7 +53,7 @@
                 <a href="https://github.com/azarnighian/az-restaurant-g" class="linkButton" target="_blank">Code</a>
             </div>
             <div>            
-                <img src="GitHub_Logo.jpeg" alt="GitHub">                                
+                <img src="images/GitHub_Logo.jpeg" alt="GitHub">                                
                 <h4>GitHub</h4>
                 <p>See more of my work on GitHub.</p>
                 <a href="https://github.com/azarnighian" class="linkButton" target="_blank">Link</a>
