--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
 	<div class="container landingContainer">
         <img src="images/IMG-20200702-WA0008.jpg" alt="Picture of me">
-        <div class="landingTextContainer">
+        <div>
             <h2>Hi,</h2>
             <h1>I'm Aharon Zarnighian.</h1>
             <h2>Web Developer</h2>
@@ -35,7 +35,7 @@
     </div>
     <div class="container myWorkContainer">
         <h3>My Work</h3>
-        <div class="myWorkImgsContainer">
+        <div>
             <div>
                 <img src="images/Trovare.png" alt="Trovare">
                 <h4>Trovare</h4>
