Added meta tags for LinkedIn and social media

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!-- Meta tags for LinkedIn and social media -->
+        <!-- https://www.linkedin.com/help/linkedin/answer/46687/making-your-website-shareable-on-linkedin?lang=en -->
+        <!-- https://css-tricks.com/essential-meta-tags-social-media/ -->
+    <meta property='og:type' content='website' />
+    <meta property='og:title' content='Aharon Zarnighian Portfolio'/>
+    <meta property='og:description' content='My portfolio website.'/>
+    <meta property='og:image' content='https://i.imgur.com/fhtMQfS.png'/>
+    <meta property='og:url' content='https://azarnighian.github.io/'/>        
     
     <title>Aharon Zarnighian</title>
     
