Changed picture of me

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <link rel="manifest" href="favicons/site.webmanifest">        
   </head>
   <body>
-	<div class="container landingContainer">
-        <img src="images/IMG-20200702-WA0008.jpg" alt="Picture of me">
+	<div class="container landingContainer">        
+        <img src="images/PXL_20220119_155847556.NIGHT.jpg" alt="Picture of me">
         <div>
             <h2>Hi,</h2>
             <h1>I'm Aharon Zarnighian.</h1>
             <h2>Web Developer</h2>
-        </div>        
+        </div>          
     </div>
     <div class="container myWorkContainer">
         <h3>My Work</h3>
