Added Shaare Yashar website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
 	<div class="container landingContainer">        
-        <img src="images/PXL_20220119_155847556.NIGHT.jpg" alt="Picture of me">
+        <img src="images/Picture of me.jpg" alt="Picture of me">
         <div>
             <h2>Hi,</h2>
             <h1>I'm Aharon Zarnighian.</h1>
@@ -45,6 +45,14 @@
     <div class="container myWorkContainer">
         <h3>My Work</h3>
         <div>
+            <div>
+                <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
+                <h4>Shaare Yashar</h4>
+                <p>An Orthodox Jewish Synagogue</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
+                <p><b>In progress.</b></p>
+                <a href="https://shaareyashar.herokuapp.com/" class="linkButton">Link</a>                
+            </div>
             <div>
                 <img src="images/Trovare.png" alt="Trovare">
                 <h4>Trovare</h4>
