Fixed Shaare Yashar description

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div>
                 <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
                 <h4>Shaare Yashar</h4>
-                <p>An Orthodox Jewish Synagogue</p>
+                <p>An orthodox Jewish synagogue website.</p>
                 <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
                 <p><b>In progress.</b></p>
                 <a href="https://shaareyashar.herokuapp.com/" class="linkButton">Link</a>                
