--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <!-- https://css-tricks.com/essential-meta-tags-social-media/ -->
     <meta property='og:type' content='website' />
     <meta property='og:title' content='Aharon Zarnighian Portfolio'/>
-    <meta property='og:description' content='My portfolio website.'/>
-    <meta property='og:image' content='https://i.imgur.com/fhtMQfS.png'/>
+    <meta property='og:description' content='My portfolio website. Work, education, and contact information.'/>
+    <meta property='og:image' content='https://i.imgur.com/6Bct5T2.png'/>
     <meta property='og:url' content='https://azarnighian.github.io/'/>        
     
     <title>Aharon Zarnighian</title>
