Added wrapper to prevent address bar from hiding on mobile browsers

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
     <link rel="manifest" href="favicons/site.webmanifest">        
   </head>
-  <body>
+  <body class="wrapper">
 	<div class="container landingContainer">        
         <img src="images/Picture of me.jpg" alt="Picture of me">
         <div>
