--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div>
                 <h2>Hi,</h2>
                 <h1>I'm Aharon Zarnighian.</h1>
-                <h2>Web Developer</h2>
+                <h2>Web Programmer</h2>
             </div>          
         </div>
         <div class="container myWorkContainer">
