--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="container landingContainer">        
             <img src="images/Picture of me.jpg" alt="Picture of me">
             <div>
-                <h2>Hi,</h2>
-                <h1>I'm Aharon Zarnighian.</h1>
+                <h2>Hi</h2>
+                <h1>I'm Aharon Zarnighian</h1>
                 <h2>Web Programmer</h2>
             </div>          
         </div>
