Changed from flexbox to grid for some things, and from em to rem

--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
                     <p>An orthodox Jewish synagogue website.</p>
                     <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
                     <p><b>In progress.</b></p>
-                    <a href="https://shaareyashar.herokuapp.com/" class="linkButton">Link</a>                
+                    <a href="https://shaareyashar.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
                 </div>            
                 <div>
                     <img src="images/Restaurant.png" alt="Restaurant">
                     <h4>Restaurant</h4>
                     <p>A restaurant website template.</p>
                     <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>React.</b></p>                
-                    <a href="https://azarnighian.github.io/az-restaurant-g/" class="linkButton">Link</a>
-                    <a href="https://github.com/azarnighian/az-restaurant-g" class="linkButton">Code</a>
+                    <a href="https://azarnighian.github.io/az-restaurant-g/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://github.com/azarnighian/az-restaurant-g" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
                 </div>
                 <div>
                     <img src="images/Trovare.png" alt="Trovare">
                     <h4>Trovare</h4>
                     <p>A website to discover restaurants around the world.</p>
                     <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>TomTom's APIs.</b></p>                
-                    <a href="https://trovare1.herokuapp.com/" class="linkButton">Link</a>
-                    <a href="https://github.com/azarnighian/CS50W-FinalProject" class="linkButton">Code</a>
+                    <a href="https://trovare1.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://github.com/azarnighian/CS50W-FinalProject" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
                 </div>
                 <div>            
                     <img src="images/GitHub_Logo.jpeg" alt="GitHub">                                
                     <h4>GitHub</h4>
                     <p>See more of my work on GitHub.</p>
-                    <a href="https://github.com/azarnighian" class="linkButton">Link</a>
+                    <a href="https://github.com/azarnighian" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 </div>
             </div>
         </div>
@@ -84,28 +84,28 @@
                 <div>
                     <h4>CS50x</h4>
                     <p>"Harvard University's introduction to the intellectual enterprises of computer science and the art of programming for majors and non-majors alike, with or without prior programming experience. An entry-level course taught by David J. Malan, CS50x teaches students how to think algorithmically and solve problems efficiently. Topics include abstraction, algorithms, data structures, encapsulation, resource management, security, software engineering, and web development. Languages include C, Python, SQL, and JavaScript plus CSS and HTML. Problem sets inspired by real-world domains of biology, cryptography, finance, forensics, and gaming. The on-campus version of CS50x , CS50, is Harvard's largest course." 
-                        (From <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x?index=product&queryID=1a17fb870c21b8cd731e74fbf2662573&position=1">edx.org</a>)
+                        (From <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x?index=product&queryID=1a17fb870c21b8cd731e74fbf2662573&position=1" target="_blank" rel="noopener noreferrer">edx.org</a>)
                     </p>
-                    <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x?index=product&queryID=0d91f1fcc46c1516a14a6fd66b9c6937&position=1" class="linkButton">Link</a>
-                    <a href="https://certificates.cs50.io/9a084188-f210-4b29-8c78-c47382f2095d.png?size=letter" class="linkButton">Regular Certificate</a>
-                    <a href="https://courses.edx.org/certificates/ff0c00f72ad14a078249dbb8f3fa803c" class="linkButton">Verified Certificate</a>
+                    <a href="https://www.edx.org/course/introduction-computer-science-harvardx-cs50x?index=product&queryID=0d91f1fcc46c1516a14a6fd66b9c6937&position=1" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://certificates.cs50.io/9a084188-f210-4b29-8c78-c47382f2095d.png?size=letter" target="_blank" rel="noopener noreferrer" class="linkButton">Regular Certificate</a>
+                    <a href="https://courses.edx.org/certificates/ff0c00f72ad14a078249dbb8f3fa803c" target="_blank" rel="noopener noreferrer" class="linkButton">Verified Certificate</a>
                 </div>
                 <div>
                     <h4>CS50W</h4>
-                    <p>"This course picks up where <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x">CS50</a> leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap." "Topics include database design, scalability, security, and user experience. Through hands-on projects, you'll learn to write and use APIs, create interactive UIs, and leverage cloud services like GitHub and Heroku. By course's end, you'll emerge with knowledge and experience in principles, languages, and tools that empower you to design and deploy applications on the Internet." 
-                        (From <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript?index=product&queryID=1a17fb870c21b8cd731e74fbf2662573&position=2">edx.org</a>)
+                    <p>"This course picks up where <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x" target="_blank" rel="noopener noreferrer">CS50</a> leaves off, diving more deeply into the design and implementation of web apps with Python, JavaScript, and SQL using frameworks like Django, React, and Bootstrap." "Topics include database design, scalability, security, and user experience. Through hands-on projects, you'll learn to write and use APIs, create interactive UIs, and leverage cloud services like GitHub and Heroku. By course's end, you'll emerge with knowledge and experience in principles, languages, and tools that empower you to design and deploy applications on the Internet." 
+                        (From <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript?index=product&queryID=1a17fb870c21b8cd731e74fbf2662573&position=2" target="_blank" rel="noopener noreferrer">edx.org</a>)
                     </p>
-                    <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript" class="linkButton">Link</a>
-                    <a href="https://certificates.cs50.io/e6312cb4-faff-499d-ad63-01078a9e8a73.png?size=letter" class="linkButton">Regular Certificate</a>
-                    <a href="https://courses.edx.org/certificates/5e312d92a1b94564baed1f195fc83fb0" class="linkButton">Verified Certificate</a>
+                    <a href="https://www.edx.org/course/cs50s-web-programming-with-python-and-javascript" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://certificates.cs50.io/e6312cb4-faff-499d-ad63-01078a9e8a73.png?size=letter" target="_blank" rel="noopener noreferrer" class="linkButton">Regular Certificate</a>
+                    <a href="https://courses.edx.org/certificates/5e312d92a1b94564baed1f195fc83fb0" target="_blank" rel="noopener noreferrer" class="linkButton">Verified Certificate</a>
                 </div>
                 <div>
                     <h4>App Academy Open</h4>
                     <p>"With App Academy Open you’ll get free access to App Academy’s entire in-person full-stack curriculum, which has placed thousands of people in software development jobs. App Academy is ranked as the #1 coding bootcamp in the US and, since 2016, has placed more software developers at Google than UC Berkeley. On the Free plan you’ll get over 1,500 hours of material (readings, videos, projects), an interactive coding environment and community features like chat to keep you connected with thousands of prospective developers across the globe." 
-                        (From <a href="https://open.appacademy.io">open.appacademy.io</a>)
+                        (From <a href="https://open.appacademy.io" target="_blank" rel="noopener noreferrer">open.appacademy.io</a>)
                         <br><i>I finished a lot of this curriculum, but I did not complete the entire curriculum, as it’s very long.</i>
                     </p>
-                    <a href="https://open.appacademy.io" class="linkButton">Link</a>
+                    <a href="https://open.appacademy.io" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 </div>
             </div>
         </div>
