--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
             <h3>My Work</h3>
             <div>
                 <div>
+                    <img src="images/Mikveh Israel.png" alt="Mikveh Israel">
+                    <h4>Mikveh Israel</h4>
+                    <p>An orthodox Jewish synagogue website.</p>
+                    <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
+                    <p><b>In progress.</b></p>
+                    <a href="https://mikvehisrael.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
+                </div>  
+                <div>
                     <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
                     <h4>Shaare Yashar</h4>
                     <p>An orthodox Jewish synagogue website.</p>
