Updated Mikveh Israel info

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
                     <h4>Mikveh Israel</h4>
                     <p>An orthodox Jewish synagogue website.</p>
                     <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
-                    <p><b>In progress.</b></p>
-                    <a href="https://mikvehisrael.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
+                    <a href="https://mikvehisrael.org/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
                 </div>  
                 <div>
                     <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
