Moved restaurant website to top, added Trovare video

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
             <h3>My Work</h3>
             <div>
                 <div>
+                    <img src="images/Restaurant.png" alt="Restaurant">
+                    <h4>Restaurant</h4>
+                    <p>A restaurant website template.</p>
+                    <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>React.</b></p>                
+                    <a href="https://azarnighian.github.io/az-restaurant-g/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://github.com/azarnighian/az-restaurant-g" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
+                </div>
+                <div>
                     <img src="images/Mikveh Israel.png" alt="Mikveh Israel">
                     <h4>Mikveh Israel</h4>
                     <p>An orthodox Jewish synagogue website.</p>
@@ -76,20 +84,13 @@
                     <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>Amazon S3 & Boto3.</b></p>                
                     <p><b>In progress.</b></p>
                     <a href="https://shaareyashar.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
-                </div>            
-                <div>
-                    <img src="images/Restaurant.png" alt="Restaurant">
-                    <h4>Restaurant</h4>
-                    <p>A restaurant website template.</p>
-                    <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>React.</b></p>                
-                    <a href="https://azarnighian.github.io/az-restaurant-g/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
-                    <a href="https://github.com/azarnighian/az-restaurant-g" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
-                </div>
+                </div>                            
                 <div>
                     <img src="images/Trovare.png" alt="Trovare">
                     <h4>Trovare</h4>
                     <p>A website to discover restaurants around the world.</p>
-                    <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>TomTom's APIs.</b></p>                
+                    <p class="techUsed">Made with: HTML, CSS, JavaScript + <b>Django</b> + <b>TomTom's APIs.</b></p>   
+                    <a href="https://photos.app.goo.gl/6HeQvkZgLWJy2RaCA" target="_blank" rel="noopener noreferrer" class="linkButton">Video</a>                                 
                     <a href="https://trovare1.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                     <a href="https://github.com/azarnighian/CS50W-FinalProject" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
                 </div>
