Removed My Education section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <div class="container myEducationContainer">
+        <!-- <div class="container myEducationContainer">
             <h3>My Education</h3>
             <div>
                 <div>
@@ -132,7 +132,7 @@
                     <a href="https://courses.edx.org/certificates/5e312d92a1b94564baed1f195fc83fb0" target="_blank" rel="noopener noreferrer" class="linkButton">Verified Certificate</a>
                 </div>                
             </div>
-        </div>
+        </div> -->
         <div class="container myContactInfoContainer">
             <h3>My Contact Information</h3>
             <div>
