Changed github link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="images/GitHub_Logo.jpeg" alt="GitHub">                                
                     <h4>GitHub</h4>
                     <p>See more of my work on GitHub.</p>
-                    <a href="https://github.com/azarnighian" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
+                    <a href="https://github.com/azarnighian?tab=repositories" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 </div>
             </div>
         </div>
