--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- https://css-tricks.com/essential-meta-tags-social-media/ -->
     <meta property='og:type' content='website' />
     <meta property='og:title' content='Aharon Zarnighian Portfolio'/>
-    <meta property='og:description' content='My portfolio website. Work, education, and contact information.'/>
+    <meta property='og:description' content='My portfolio website. Work and contact information.'/>
     <meta property='og:image' content='https://i.imgur.com/lTIqUib.png'/>
     <meta property='og:url' content='https://azarnighian.github.io/'/>        
     
