Changed pictures of me

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta property='og:type' content='website' />
     <meta property='og:title' content='Aharon Zarnighian Portfolio'/>
     <meta property='og:description' content='My portfolio website. Work and contact information.'/>
-    <meta property='og:image' content='https://i.imgur.com/lTIqUib.png'/>
+    <meta property='og:image' content='https://i.imgur.com/HmmN6HT.png'/>
     <meta property='og:url' content='https://azarnighian.github.io/'/>        
     
     <title>Aharon Zarnighian</title>
