Changed picture of me

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
     <div class="wrapper">
         <div class="container landingContainer">        
-            <img src="images/Picture of me.jpg" alt="Picture of me">
+            <img src="images/Picture of me.png" alt="Picture of me">
             <div>
                 <h2>Hi</h2>
                 <h1>I'm Aharon Zarnighian</h1>
