--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
         <!-- https://infosec.mozilla.org/guidelines/web_security#implementation-notes -->
     <meta http-equiv="Content-Security-Policy" 
           content=          
-          "default-src 'self'; 
+          "default-src 'none'; 
           font-src https://fonts.googleapis.com https://fonts.gstatic.com; 
           style-src 'self' https://fonts.googleapis.com;
-          object-src 'none';
+          script-src 'self';
+          img-src 'self';
+          manifest-src 'self';
           base-uri 'none';"
     >    
          
