Updated CSP again

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           script-src 'self';
           img-src 'self';
           manifest-src 'self';
-          base-uri 'none';"
+          base-uri 'none';
+          form-action 'none';
     >    
          
     <meta charset="UTF-8">
