--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           img-src 'self';
           manifest-src 'self';
           base-uri 'none';
-          form-action 'none';
+          form-action 'none';"
     >    
          
     <meta charset="UTF-8">
