--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 <img src="images/Mikveh Israel.png" alt="Mikveh Israel">
                 <h4>Mikveh Israel</h4>
                 <p>A Jewish synagogue website.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, <b>Django</b> and <b>Amazon S3 & Boto3.</b></p>                
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                
                 <a href="https://mikvehisrael.org/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
             </div>  
             <div>
                 <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
                 <h4>Shaare Yashar</h4>
                 <p>A Jewish synagogue website.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, <b>Django</b> and <b>Amazon S3 & Boto3.</b></p>                
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                
                 <p><b>In progress.</b></p>
                 <a href="https://shaareyashar.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
             </div>
@@ -90,7 +90,7 @@
                 <img src="images/Trovare.png" alt="Trovare">
                 <h4>Trovare</h4>
                 <p>A website to discover restaurants around the world.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, <b>Django</b> and <b>TomTom's APIs.</b></p>   
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and TomTom's APIs.</p>   
                 <a href="https://photos.app.goo.gl/6HeQvkZgLWJy2RaCA" target="_blank" rel="noopener noreferrer" class="linkButton">Video</a>                                 
                 <a href="https://trovare1.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 <a href="https://github.com/azarnighian/CS50W-FinalProject" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
@@ -99,7 +99,7 @@
                 <img src="images/Restaurant.png" alt="Restaurant">
                 <h4>Restaurant</h4>
                 <p>A restaurant website template.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript and <b>React.</b></p>                
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, and React.</p>                
                 <a href="https://azarnighian.github.io/az-restaurant-g/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 <a href="https://github.com/azarnighian/az-restaurant-g" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
             </div>
