Removed Shaare Yashar link

--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
                 <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
                 <h4>Shaare Yashar</h4>
                 <p>A Jewish synagogue website.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                
-                <p><b>In progress.</b></p>
-                <a href="https://shaareyashar.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                                
+                <p>Discontinued.</p>
             </div>
             <div>
                 <img src="images/English Sephardic Sefarim.png" alt="English Sephardic Sefarim">
