Changed a picture and its text, and removed periods

--- a/index.html
+++ b/index.html
@@ -67,29 +67,29 @@
             <div>
                 <img src="images/Mikveh Israel.png" alt="Mikveh Israel">
                 <h4>Mikveh Israel</h4>
-                <p>A Jewish synagogue website.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                
+                <p>A Jewish synagogue website</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3</p>                
                 <a href="https://mikvehisrael.org/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
             </div>  
             <div>
                 <img src="images/Shaare Yashar.png" alt="Shaare Yashar">
                 <h4>Shaare Yashar</h4>
-                <p>A Jewish synagogue website.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3.</p>                                
-                <p>Discontinued.</p>
+                <p>A Jewish synagogue website</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and Amazon S3 & Boto3</p>                                
+                <p>Discontinued</p>
             </div>
             <div>
                 <img src="images/English Sephardic Sefarim.png" alt="English Sephardic Sefarim">
                 <h4>English Sephardic Sefarim</h4>
-                <p>A website to show Sefarim written in English for Sephardim.</p>
-                <p class="techUsed">Made with: HTML and CSS.</p>                
+                <p>A website to show Jewish books written in English for Sephardic Jews</p>
+                <p class="techUsed">Made with: HTML and CSS</p>                
                 <a href="https://englishsephardicsefarim.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>                
             </div> 
             <div>
                 <img src="images/Trovare.png" alt="Trovare">
                 <h4>Trovare</h4>
-                <p>A website to discover restaurants around the world.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and TomTom's APIs.</p>   
+                <p>A website to discover restaurants around the world</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, Django, and TomTom's APIs</p>   
                 <a href="https://photos.app.goo.gl/6HeQvkZgLWJy2RaCA" target="_blank" rel="noopener noreferrer" class="linkButton">Video</a>                                 
                 <a href="https://trovare1.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 <a href="https://github.com/azarnighian/CS50W-FinalProject" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
@@ -97,15 +97,15 @@
             <div>
                 <img src="images/Restaurant.png" alt="Restaurant">
                 <h4>Restaurant</h4>
-                <p>A restaurant website template.</p>
-                <p class="techUsed">Made with: HTML, CSS, JavaScript, and React.</p>                
+                <p>A restaurant website template</p>
+                <p class="techUsed">Made with: HTML, CSS, JavaScript, and React</p>                
                 <a href="https://azarnighian.github.io/az-restaurant-g/" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
                 <a href="https://github.com/azarnighian/az-restaurant-g" target="_blank" rel="noopener noreferrer" class="linkButton">Code</a>
             </div>
             <div>            
                 <img src="images/GitHub_Logo.jpeg" alt="GitHub">                                
                 <h4>GitHub</h4>
-                <p>See more of my work on GitHub.</p>
+                <p>See more of my work on GitHub</p>
                 <a href="https://github.com/azarnighian?tab=repositories" target="_blank" rel="noopener noreferrer" class="linkButton">Link</a>
             </div>
         </div>
