--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </head>
   <body>    
     <div class="container landingContainer">        
-        <img src="images/Picture of me.png" alt="Picture of me">
+        <img src="images/Picture of me.jpg" alt="Picture of me">
         <div>
             <h2>Hi</h2>
             <h1>I'm Aharon Zarnighian</h1>
