--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property='og:type' content='website' />
     <meta property='og:title' content='Aharon Zarnighian Portfolio'/>
     <meta property='og:description' content='My portfolio website. Work and contact information.'/>
-    <meta property='og:image' content='https://i.imgur.com/U3aohmC.png'/>
+    <meta property='og:image' content='https://i.imgur.com/VLP3Ulc.png'/>
     <meta property='og:url' content='https://azarnighian.github.io/'/>        
     
     <title>Aharon Zarnighian</title>
